--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "rimraf ./dist",
     "dev": "NODE_ENV=development && nodemon server.js --ignore app/ --exec babel-node",
     "lint": "./node_modules/.bin/eslint app server.js webpack.*.js",
+    "sass-lint": "node ./node_modules/sass-lint/bin/sass-lint.js --config app/config/.sass-lint.yml './public/**/*.scss' --verbose --no-exit",
     "start": "NODE_ENV=production && ./node_modules/.bin/babel-node server"
   },
   "dependencies": {
@@ -48,6 +49,7 @@
     "react-dom": "^15.0.1",
     "react-ga": "^2.1.0",
     "react-router": "^2.4.1",
+    "sass-lint": "^1.8.0",
     "sass-loader": "^3.2.0",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
