--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -21,7 +21,7 @@ rules:
   no-color-keywords: 1
   no-color-literals: 1
   no-combinators: 0
-  no-css-comments: 1
+  no-css-comments: 0
   no-debug: 1
   no-disallowed-properties: 0
   no-duplicate-properties: 1
@@ -64,7 +64,10 @@ rules:
   empty-args: 1
   hex-length: 1
   hex-notation: 1
-  indentation: 1
+  indentation:
+  - 2
+  -
+    size: 2
   leading-zero: 1
   nesting-depth: 1
   property-sort-order: 1
