--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf ./dist",
     "dev": "NODE_ENV=development && nodemon server.js --ignore app/ --exec babel-node",
     "lint": "./node_modules/.bin/eslint app server.js webpack.*.js",
-    "sass-lint": "node ./node_modules/sass-lint/bin/sass-lint.js --config app/config/.sass-lint.yml './public/**/*.scss' --verbose --no-exit",
+    "sass-lint": "node ./node_modules/sass-lint/bin/sass-lint.js --config .sass-lint.yml './public/**/*.scss' --verbose --no-exit",
     "start": "NODE_ENV=production && ./node_modules/.bin/babel-node server"
   },
   "dependencies": {
