added facebook auth strategy

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nodemon": "^1.11.0",
     "normalize.css": "^7.0.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
