added sample fields

--- a/sample.env
+++ b/sample.env
@@ -10,3 +10,9 @@ LASTFM_KEY=12345
 LASTFM_USERNAME=nopenopenope
 
 SESSION_SECRET=1234567890
+
+FACEBOOK_APP_SECRET=12345
+FACEBOOK_APP_ID=12345
+
+GOOGLE_CLIENT_ID=12345shau.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=ABCDEFG
