--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
+    "bulma": "^0.5.3",
     "compression": "^1.7.1",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
