--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["env", "stage-3", "react"],
+  "presets": ["env", "stage-3", "react", "flow"],
   "plugins": [
     "add-module-exports",
     "transform-class-properties",
