--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.4",
+    "flow-typed": "^2.2.3",
     "forever": "^0.15.3",
     "github": "11.0.0",
     "html-minify-loader": "^1.3.0",
@@ -77,6 +78,7 @@
   "devDependencies": {
     "babel-eslint": "^8.0.1",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-flow": "^6.23.0",
     "chai": "^4.1.2",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
@@ -84,6 +86,7 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.4.0",
+    "flow-bin": "^0.59.0",
     "mocha": "^3.5.3",
     "mocha-generators": "^2.0.0",
     "nightmare": "^2.10.0",
