--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^4.1.0",
-    "webpack-bundle-size-analyzer": "^2.7.0"
+    "webpack-bundle-size-analyzer": "^2.7.0",
+    "webpack-jarvis": "^0.1.1"
   }
 }
