nearly fixed docker configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       environment:
         - MONGO_DATA_DIR=/data/db
         - MONGO_LOG_DIR=/dev/null
-      volumes:
-        - ./data/db:/data/db
+      # volumes:
+      #   - ./data/db:/data/db
       ports:
           - 27017:27017
       command: mongod --smallfiles --logpath=/dev/null # --quiet
@@ -17,17 +17,18 @@ services:
       args:
         - NODE_ENV=development
     command: "npm run dev"
+    ports:
+      - '7999:7999'
     expose:
-      - "7999"
       - '27017'
-      - "1337"
-    external_links: ["localhost:mongodb"]
+    external_links: ["mongodb:mongodb"]
     volumes:
       - .:/opt/app
       # workaround to prevent host node_modules from accidently getting mounted in container
       - notused:/opt/app/node_modules
     environment:
       - NODE_ENV=development
+      - MONGO_URL=mongodb
 
 volumes:
     notused:
