switched to quilljs for text editor for writing blog posts / creating galleries

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "analyze": "babel-node ./node_modules/webpack/bin/webpack --config ./webpack/webpack.production.config.js --json | webpack-bundle-size-analyzer"
   },
   "dependencies": {
-    "@octokit/rest": "^15.2.2",
+    "@octokit/rest": "^15.2.4",
     "autoprefixer": "^8.1.0",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
@@ -36,7 +36,7 @@
     "compression": "^1.7.2",
     "connect-mongodb-session": "^2.0.1",
     "cookie-parser": "^1.4.3",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -63,6 +63,7 @@
     "react-ga": "^2.4.1",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.0",
+    "react-quill": "^1.2.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "rimraf": "^2.6.2",
@@ -81,7 +82,7 @@
     "babel-polyfill": "^6.26.0",
     "chai": "^4.1.2",
     "chromy": "^0.5.11",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
