--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-markdown": "^3.3.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.4.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
