--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mldangelo.com",
-  "homepage": "https://github.com/mldangelo/personal-site",
+  "name": "zexihan.com",
+  "homepage": "https://github.com/zexihan/personal-site",
   "version": "1.0.1",
   "private": true,
   "scripts": {
