--- a/nginx/mldangelo.conf
+++ b/nginx/mldangelo.conf
@@ -4,11 +4,11 @@
 
 server {
   listen 443 ssl;
-  server_name www.zexihan.com zexhan.com;
-  access_log /var/log/nginx/zexihan.log;
+  server_name www.mldangelo.com mldangelo.com;
+  access_log /var/log/nginx/mldangelo.log;
 
-  ssl_certificate "/etc/letsencrypt/live/zexihan.com/fullchain.pem";
-  ssl_certificate_key "/etc/letsencrypt/live/zexihan.com/privkey.pem";
+  ssl_certificate "/etc/letsencrypt/live/mldangelo.com/fullchain.pem";
+  ssl_certificate_key "/etc/letsencrypt/live/mldangelo.com/privkey.pem";
 
   ssl_session_cache shared:SSL:1m;
   ssl_session_timeout  10m;
@@ -67,7 +67,7 @@ server {
   }
   
   # Nearest dollar
-  location /projects/nearestdollar/ {
+  location /portfolio/nearestdollar/ {
     proxy_pass http://localhost:7645;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
